# ED22-01-Fredes-Munizaga

./: CMakeLists.txt  README.md
docs/: BITACORA.md  README.md
images/: BITACORA.md  README.md  gente.jfif
src/: CMakeLists.txt  Detector.cpp  Detector.hpp  LinkedList.cpp  LinkedList.hpp  NodoLinkedList.cpp  NodoLinkedList.hpp  Persona.cpp  Persona.hpp  detectPeople.cpp  detectPeopleSimple.cpp  main.cpp
